<resources>
    <string name="app_name">SteelCheeks</string>
    <string name="loading_text">Loading…</string>
    <string name="error_text">Something went wring</string>
    <string name="success_text">Todo ha ido bien</string>
    <string name="kcal_text">Energy: %s</string>
    <string name="carbohydrates_text">Carbs: %s</string>
    <string name="proteins_text">Proteins: %s</string>
    <string name="search_field_hint">Search for an item</string>
    <string name="detail_view_details_header">Details</string>
    <string name="detail_view_barcode_field">Barcode</string>
    <string name="detail_view_name_field">Name</string>
    <string name="detail_view_brand_field">Brand</string>
    <string name="detail_view_serving_size_field">Serving size</string>
    <string name="detail_view_nutritional_values_header">Nutritional values</string>
    <string name="detail_view_calories_field">Calories (kcal)</string>
    <string name="detail_view_protein_field">Protein (g)</string>
    <string name="detail_view_carbohydrates_field">Carbohydrates (g)</string>
    <string name="detail_view_fat_field">Fat (g)</string>
    <string name="save_food_to_local_database">Save food to local database</string>
    <string name="tv_food_detail_serving_unit">Serving Unit</string>
    <string name="diary_total_calories">Calories</string>
    <string name="diary_total_carbs">Carbs</string>
    <string name="diary_total_protein">Protein</string>
    <string name="diary_total_fat">Fat</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="add_a_food_item_for_the_selected_date">Add a food item for the selected date</string>
    <string name="diary_title">Diary</string>
    <string name="foods_title">Foods</string>
    <string name="settings_title">Settings</string>
</resources>