<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.steelcheeks.ui.food.FoodsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/detail_view_details_header"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/foodDetailImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="200dp"
                    android:maxHeight="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetails"
                    app:imageUrl="@{viewModel.food.imageUrl}"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/detail_view_barcode_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/foodDetailImage" />

                <TextView
                    android:id="@+id/tvBarcodeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvBarcode"
                    tools:text="3293423092"
                    android:text="@{viewModel.food.code}"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/detail_view_name_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBarcode" />

                <TextView
                    android:id="@+id/tvNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detailsBarrier"
                    app:layout_constraintTop_toTopOf="@id/tvName"
                    tools:text="Nombre del producto"
                    android:text="@{viewModel.food.productName}"/>

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_brand_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <TextView
                    android:id="@+id/tvBrandValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detailsBarrier"
                    app:layout_constraintTop_toTopOf="@id/tvBrand"
                    tools:text="El Pozo"
                    android:text="@{viewModel.food.productBrands}"/>

                <TextView
                    android:id="@+id/tvServingSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_serving_size_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBrand" />

                <TextView
                    android:id="@+id/tvServingSizeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvServingSize"
                    tools:text="25"
                    android:text="@{Long.toString(viewModel.food.productQuantity)}"/>

                <TextView
                    android:id="@+id/tvServingUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_food_detail_serving_unit"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvServingSize"
                    tools:text="Serving Unit" />

                <TextView
                    android:id="@+id/tvServingUnitValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvServingUnit"
                    tools:text="g"
                    android:text="@{viewModel.food.productQuantityUnit}"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/detailsBarrier"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="tvBarcode,tvName,tvBrand,tvServingSize,tvServingUnit" />

                <TextView
                    android:id="@+id/tvNutritionalValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/detail_view_nutritional_values_header"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvServingUnit" />

                <TextView
                    android:id="@+id/tvCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_calories_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNutritionalValues" />

                <TextView
                    android:id="@+id/tvCaloriesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNutritionalValues"
                    tools:text="699"
                    android:text="@{viewModel.food.energyKcal.toString()}"/>

                <TextView
                    android:id="@+id/tvProtein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_protein_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCalories" />

                <TextView
                    android:id="@+id/tvProteinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCalories"
                    tools:text="69"
                    android:text="@{viewModel.food.proteins.toString()}"/>

                <TextView
                    android:id="@+id/tvCarbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_carbohydrates_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvProtein" />

                <TextView
                    android:id="@+id/tvCarbsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvProtein"
                    tools:text="19"
                    android:text="@{viewModel.food.carbohydrates.toString()}"/>

                <TextView
                    android:id="@+id/tvFat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_view_fat_field"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCarbs" />

                <TextView
                    android:id="@+id/tvFatValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCarbs"
                    tools:text="10"
                    android:text="@{viewModel.food.fat.toString()}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_to_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/save_food_to_local_database"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>